# X-Test

./: .gitignore  CMakeLists.txt  Config.cmake.in  README.md  X-Test.hpp  X-TestConfig.cmake  X-TestConfig.cmake.in  main.cpp
examples/: add.cpp  fizzbuzz.cpp
inc/: ArgGenerator.hpp  Formatter.hpp  FunctionTraits.hpp  TestBase.hpp  TypeTraits.hpp  UnitTest.hpp  ansi.hpp  expectations.hpp  fwd_dcl.hpp  stl_includes.hpp  utils.hpp
include/: ArgGenerator.hpp  CMakeLists.txt  CaseArg.hpp  Formatter.hpp  FunctionTraits.hpp  TypeTraits.hpp  UnitTest.hpp  X-Test.hpp  ansi.hpp  generator_f.hpp  macrodef.hpp  utils.hpp
include/X-Test/: TestBase.hpp  fwd_dcl.hpp
src/: CaseArg.hpp  Formatter.cpp  FunctionTraits.cpp  TestBase.cpp  TypeTraits.cpp  UnitTest.cpp  utils.cpp
